<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/taskText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="Enter task name..."
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <com.google.android.material.chip.ChipGroup
        android:id="@+id/contextGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskText"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/H"
            android:layout_width="75dp"
            android:layout_height="50dp"
            android:checkable="true"
            android:text="H"
            android:textAlignment="center"
            app:chipBackgroundColor="#FFF"
            app:chipStrokeColor="#E3D561"
            app:chipStrokeWidth="2dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/W"
            android:layout_width="75dp"
            android:layout_height="50dp"
            android:checkable="true"
            android:text="W"
            android:textAlignment="center"
            app:chipBackgroundColor="#FFF"
            app:chipStrokeColor="#58D1E1"
            app:chipStrokeWidth="2dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/S"
            android:layout_width="75dp"
            android:layout_height="50dp"
            android:checkable="true"
            android:text="S"
            android:textAlignment="center"
            app:chipBackgroundColor="#FFF"
            app:chipStrokeColor="#D267E4"
            app:chipStrokeWidth="2dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/E"
            android:layout_width="75dp"
            android:layout_height="50dp"
            android:checkable="true"
            android:text="E"
            android:textAlignment="center"
            app:chipBackgroundColor="#FFF"
            app:chipStrokeColor="#70D875"
            app:chipStrokeWidth="2dp" />


    </com.google.android.material.chip.ChipGroup>


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskText"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/dailyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Daily" />

        <RadioButton
            android:id="@+id/weeklyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Weekly" />

        <RadioButton
            android:id="@+id/monthlyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Monthly" />

        <RadioButton
            android:id="@+id/annuallyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Annually" />

    </RadioGroup>

    <TextView
        android:id="@+id/customDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="206dp"
        android:text="Choose Start Date"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/pickTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Pick Time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customDate"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>